--- a/profile/index.html
+++ b/profile/index.html
@@ -32,16 +32,16 @@
         <h2>--------follow me--------</h2>
           <ul>
             <li>
-              <a href="https://www.facebook.com/jwang2929"><i class="fab fa-facebook-square"></i></a>
+              <a href="https://www.facebook.com/jwang2929" target = "_blank"><i class="fab fa-facebook-square"></i></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/jwang2929"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/jwang2929" target = "_blank"><i class="fab fa-linkedin-in"></i></a>
             </li>
             <li>
-              <a href="https://github.com/monkinwood"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/monkinwood" target = "_blank"><i class="fab fa-github"></i></a>
             </li>
             <li>
-              <a href="mailto:jwang2929@gmail.com"><i class="far fa-envelope-open"></i></a>
+              <a href="mailto:jwang2929@gmail.com" target = "_blank"><i class="far fa-envelope-open"></i></a>
             </li>
           </ul>
       </div>
